# renetti

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dev/: equip_img_count.ipynb  equipment_s3_bucketing.ipynb  scrape_analysis.ipynb  scratch.ipynb
renetti/: classes.py  models.py  models_predict.py  utils.py
renetti/ml/: classes.py  efficientNetB0_train_and_predict.py  models_predict.py  resnet50_train_and_predict.py  utils.py
renetti/ml/models/: efficientNetB0.py  resnet18.py
renetti/models/: resnet18.py
renetti/renetti_aws/scripts/: pull_equipment_images.py
renetti/ws/image_search/: bing_search.py  duckduckgo.py  google_search.py
renetti/ws/spiders/: __init__.py  classes.py  run_spider.py  scratch.ipynb  types.py  utils.py
renetti/ws/spiders/sites/: atlantis_strength.py  eleiko.py  gym_equipment.py  hoist_fitness.py  life_fitness.py  matrix_fitness.py  rogue_fitness.py  techno_gym.py  technogym.py  uk_gym_equipment.py
