[tool.poetry]
name = "renetti"
version = "0.1.0"
description = ""
authors = ["Dan Lenehan <daniel.lenehan.ie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.17.0"
keras = "^3.5.0"
torch = "^2.4.1"
torchvision = "^0.19.1"
pillow = "^10.4.0"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
pyheif = "^0.8.0"
efficientnet-pytorch = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
