[tool.poetry]
name = "renetti"
version = "0.1.0"
description = ""
authors = ["Dan Lenehan <daniel.lenehan.ie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
pyheif = "^0.8.0"
duckduckgo-search = "^6.2.13"
beautifulsoup4 = "^4.12.3"
types-requests = "^2.32.0.20240914"
playwright = "^1.47.0"
aiohttp = "^3.10.9"
nltk = "^3.9.1"
tensorflow = "^2.18.0"
keras = "^3.6.0"
torch = "^2.5.0"
torchvision = "^0.20.0"
efficientnet-pytorch = "^0.7.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
mypy = "^1.11.2"
isort = "^5.13.2"
flake8 = "^7.1.1"
notebook = "^7.2.2"
types-requests = "^2.32.0.20240914"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
